--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "@actions/github": "^6.0.1",
     "@octokit/rest": "^22.0.0",
     "bytes": "^3.1.2",
-    "minimatch": "^10.0.3"
+    "minimatch": "^10.0.3",
+    "neverthrow": "^8.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
