--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -211,10 +211,66 @@ jobs:
             echo "ℹ️ No changes to dist/" >> $GITHUB_STEP_SUMMARY
           fi
 
+  integration-test:
+    name: Integration Tests (Node ${{ matrix.node-version }})
+    runs-on: ubuntu-latest
+    needs: detect-changes
+    if: needs.detect-changes.outputs['docs-only'] == 'false'
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [20, 22]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.18.3
+
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run integration tests
+        run: |
+          echo "## 🔬 Integration Tests (Node ${{ matrix.node-version }})" >> $GITHUB_STEP_SUMMARY
+          if pnpm test:vitest __tests__/integration.test.ts; then
+            echo "✅ Integration tests passed" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "❌ Integration tests failed" >> $GITHUB_STEP_SUMMARY
+            exit 1
+          fi
+
+      - name: Verify dist/ build
+        run: |
+          echo "## 📦 Verify dist/ Build" >> $GITHUB_STEP_SUMMARY
+
+          # 既存のdist/をバックアップ
+          cp -r dist/ dist-backup/
+
+          # 再ビルド
+          pnpm build
+
+          # 差分チェック
+          if diff -r dist/ dist-backup/ > /dev/null 2>&1; then
+            echo "✅ dist/ is up to date" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⚠️ dist/ differs from committed version" >> $GITHUB_STEP_SUMMARY
+            echo "Run \`pnpm build\` and commit the changes" >> $GITHUB_STEP_SUMMARY
+            diff -r dist/ dist-backup/ || true
+            exit 1
+          fi
+
   quality-gate:
     name: Quality Gate
     runs-on: ubuntu-latest
-    needs: [detect-changes, docs-quality, code-quality]
+    needs: [detect-changes, docs-quality, code-quality, integration-test]
     if: always()
 
     steps:
@@ -224,6 +280,7 @@ jobs:
           markdown_changed="${{ needs.detect-changes.outputs['markdown-changed'] }}"
           docs_result="${{ needs.docs-quality.result }}"
           code_result="${{ needs.code-quality.result }}"
+          integration_result="${{ needs.integration-test.result }}"
 
           echo "## 🎯 Quality Gate Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -252,6 +309,14 @@ jobs:
               echo "✅ Code quality checks passed" >> $GITHUB_STEP_SUMMARY
             else
               echo "❌ Code quality checks failed" >> $GITHUB_STEP_SUMMARY
+              all_success=false
+            fi
+
+            # 統合テスト結果
+            if [[ "$integration_result" == "success" ]]; then
+              echo "✅ Integration tests passed" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "❌ Integration tests failed" >> $GITHUB_STEP_SUMMARY
               all_success=false
             fi
 
