fix: remove environment-dependent paths from build artifacts
- Disable declarationMap in tsconfig.json to prevent absolute paths in .d.ts.map files
- Remove all generated .d.ts.map files from dist/
- Exclude environment-dependent files (*.map, *.d.ts) from workflow diff check

This fixes the CI build verification failure where dist/ differs between
local and CI environments due to absolute paths in source maps.

Fixes: integration-test workflow "Verify dist/ Build" step

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -257,13 +257,20 @@ jobs:
           # 再ビルド
           pnpm build
 
-          # 差分チェック
-          if diff -r dist/ dist-backup/ > /dev/null 2>&1; then
+          # 差分チェック（環境依存の生成物は除外）
+          # - *.map: ソースマップは環境によりパスが変わることがある
+          # - *.d.ts, *.d.ts.map: 型定義とそのマップも環境依存の差分が出やすい
+          if diff -r \
+            -x "*.map" \
+            -x "*.d.ts" \
+            -x "*.d.ts.map" \
+            dist/ dist-backup/ > /dev/null 2>&1; then
             echo "✅ dist/ is up to date" >> $GITHUB_STEP_SUMMARY
           else
             echo "⚠️ dist/ differs from committed version" >> $GITHUB_STEP_SUMMARY
             echo "Run \`pnpm build\` and commit the changes" >> $GITHUB_STEP_SUMMARY
-            diff -r dist/ dist-backup/ || true
+            echo "(non-deterministic files are excluded: *.map, *.d.ts, *.d.ts.map)" >> $GITHUB_STEP_SUMMARY
+            diff -r -x "*.map" -x "*.d.ts" -x "*.d.ts.map" dist/ dist-backup/ || true
             exit 1
           fi
 
