refactor(configs): centralize and reuse default settings

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -304,6 +304,7 @@ jobs:
             **/__tests__/**
             **/*.test.ts
             **/*.spec.ts
+            src/index.ts
 
   quality-gate:
     name: Quality Gate
