fix: address CodeRabbit review comments for PR #34
Critical Fixes:
- Add missing i18n validation error messages to requirements.md
- Normalize size label prefix from "size/large" to "large" in failure-evaluator.ts

Major Fixes:
- Make 'auto:too-many-lines' label configurable via too_many_lines_label input
- Align size thresholds documentation across README.md (100/500/1000)

Additional Improvements:
- Update test file count estimate from 19 to 5 in requirements.md
- Fix tests to reflect size label normalization changes
- Add too_many_lines_label to ActionInputs, Config, and input-mapper

All tests passing (595/595)

--- a/action.yml
+++ b/action.yml
@@ -79,6 +79,11 @@ inputs:
     required: false
     default: "auto:too-many-files"
 
+  too_many_lines_label:
+    description: "Label for files exceeding line count limits"
+    required: false
+    default: "auto:too-many-lines"
+
   # 動作設定
   skip_draft_pr:
     description: "Skip check for draft PRs"
@@ -92,7 +97,7 @@ inputs:
 
   # Label-Based Workflow Failure Control
   fail_on_large_files:
-    description: "Fail workflow if large files are detected (labeled with auto:large-files or auto:too-many-lines)"
+    description: "Fail workflow if large files are detected (labeled with large_files_label or too_many_lines_label)"
     required: false
     default: ""
 
