fix: address CodeRabbit review comments and unify script naming
- Add --cache-strategy content to ESLint for CI compatibility
- Unify script naming to tool:action pattern (eslint, eslint:fix, prettier, prettier:write)
- Remove duplicate and unnecessary scripts (check, check:all, fix, fix:lint, fix:format)
- Optimize TypeScript cache key to exclude source files (improves incremental build)
- Add .tsbuildinfo cleanup to mise clean task
- Simplify mise.toml lint task (type-check now included in pnpm lint)

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -156,7 +156,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .tsbuildinfo
-          key: tsbuildinfo-${{ runner.os }}-${{ hashFiles('tsconfig.json', 'src/**/*.ts') }}
+          key: tsbuildinfo-${{ runner.os }}-${{ hashFiles('tsconfig.json') }}
           restore-keys: |
             tsbuildinfo-${{ runner.os }}-
 
@@ -265,7 +265,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .tsbuildinfo
-          key: tsbuildinfo-${{ runner.os }}-${{ hashFiles('tsconfig.json', 'src/**/*.ts') }}
+          key: tsbuildinfo-${{ runner.os }}-${{ hashFiles('tsconfig.json') }}
           restore-keys: |
             tsbuildinfo-${{ runner.os }}-
 
