--- a/package.json
+++ b/package.json
@@ -18,23 +18,19 @@
     "generate:i18n-types": "tsx scripts/generate-i18n-types.ts",
     "dev": "run-s generate:i18n-types && tsx watch src/index.ts",
     "build": "run-s generate:i18n-types && ncc build src/index.ts -o dist --source-map --license licenses.txt",
-    "test": "run-s generate:i18n-types && run-p lint type-check test:vitest",
+    "test": "run-s generate:i18n-types && run-p lint test:vitest",
     "test:vitest": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:quick": "run-s generate:i18n-types && run-p lint type-check",
-    "check": "run-s generate:i18n-types && run-p lint type-check format:check",
-    "check:all": "run-s check test:vitest",
-    "lint": "eslint . --cache",
-    "lint:fix": "eslint . --fix --cache",
+    "test:quick": "run-s generate:i18n-types && run-p eslint type-check",
+    "lint": "run-s generate:i18n-types && run-p eslint type-check prettier",
+    "eslint": "eslint . --cache --cache-strategy content",
+    "eslint:fix": "eslint . --fix --cache --cache-strategy content",
     "type-check": "tsc --noEmit",
-    "format": "run-s lint:fix format:prettier",
-    "format:prettier": "prettier --write . --log-level warn",
-    "format:check": "prettier --check .",
-    "fix": "run-s fix:lint fix:format",
-    "fix:lint": "eslint . --fix",
-    "fix:format": "prettier --write . --log-level warn"
+    "format": "run-s prettier:write eslint:fix",
+    "prettier": "prettier --check .",
+    "prettier:write": "prettier --write . --log-level warn"
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
