refactor: move i18n type generation to postinstall hook
- Add postinstall hook to auto-generate i18n types after npm install
- Remove redundant generate:i18n-types calls from dev, build, test, test:quick, lint
- Simplifies scripts and eliminates duplication

--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "main": "dist/index.js",
   "scripts": {
     "generate:i18n-types": "tsx scripts/generate-i18n-types.ts",
-    "dev": "run-s generate:i18n-types && tsx watch src/index.ts",
-    "build": "run-s generate:i18n-types && ncc build src/index.ts -o dist --source-map --license licenses.txt",
-    "test": "run-s generate:i18n-types && run-p lint test:vitest",
+    "postinstall": "pnpm generate:i18n-types",
+    "dev": "tsx watch src/index.ts",
+    "build": "ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "test": "run-p lint test:vitest",
     "test:vitest": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:quick": "run-s generate:i18n-types && run-p eslint type-check",
-    "lint": "run-s generate:i18n-types && run-p eslint type-check prettier",
+    "test:quick": "run-p eslint type-check",
+    "lint": "run-p eslint type-check prettier",
     "eslint": "eslint . --cache --cache-strategy content",
     "eslint:fix": "eslint . --fix --cache --cache-strategy content",
     "type-check": "tsc --noEmit",
