--- a/mise.toml
+++ b/mise.toml
@@ -6,20 +6,31 @@ _.path = ['./node_modules/.bin']
 [tools]
 node = '22'
 "npm:pnpm" = '10.18.3'
-"npm:prettier" = 'latest'
-"npm:markdownlint-cli2" = 'latest'
-"npm:markdown-link-check" = 'latest'
 fd = 'latest'
 
 [tasks]
 # === 統合タスク ===
-format.run = ["mise fmt", "pnpm format", "markdownlint-cli2 --fix '**/*.md'"]
+[tasks.format]
+description = "コードとドキュメントのフォーマット"
+depends = ["pnpm:format", "docs:fix"]
 
-lint.run = ["pnpm lint", "markdownlint-cli2 '**/*.md'"]
+[tasks."pnpm:format"]
+run = "pnpm format"
 
-test.run = ["pnpm test"]
+[tasks.lint]
+description = "コードとドキュメントのlint"
+depends = ["pnpm:lint", "docs:lint"]
 
-build.run = ["pnpm build"]
+[tasks."pnpm:lint"]
+run = "pnpm lint"
+
+[tasks.test]
+description = "テスト実行"
+run = "pnpm test"
+
+[tasks.build]
+description = "ビルド実行"
+run = "pnpm build"
 
 # === 開発支援 ===
 [tasks."dev:debug"]
@@ -34,13 +45,7 @@ run = "ncc build src/index.ts -o dist --watch"
 # === CI/CD ===
 [tasks.ci]
 description = "CI/CD用の完全品質チェック"
-run = [
-  "mise run format",
-  "mise run lint",
-  "mise run test",
-  "mise run build",
-  "mise run docs:check",
-]
+depends = ["format", "lint", "test", "build", "docs:check"]
 
 [tasks.quick]
 description = "開発中のクイックチェック"
@@ -49,50 +54,23 @@ run = "pnpm test:quick"
 # === セットアップ ===
 [tasks.setup]
 description = "プロジェクト初期セットアップ"
-run = ["pnpm install", "mise run build", "mise run test"]
+depends = ["setup:install", "build", "test"]
 
-# === リリース準備 ===
-[tasks.release]
-description = "インタラクティブなリリース（バージョンタイプを選択）"
-run = '''
-echo "リリースタイプを選択してください:"
-echo "  1) patch (バグ修正)"
-echo "  2) minor (新機能)"
-echo "  3) major (破壊的変更)"
-read -p "選択 (1-3): " -n 1 -r choice
-echo
-case $choice in
-  1) ./.specify/scripts/release.sh patch ;;
-  2) ./.specify/scripts/release.sh minor ;;
-  3) ./.specify/scripts/release.sh major ;;
-  *) echo "無効な選択です"; exit 1 ;;
-esac
-'''
-
-[tasks."release:patch"]
-description = "パッチリリース (v1.0.x)"
-run = "./.specify/scripts/release.sh patch"
-
-[tasks."release:minor"]
-description = "マイナーリリース (v1.x.0)"
-run = "./.specify/scripts/release.sh minor"
-
-[tasks."release:major"]
-description = "メジャーリリース (vx.0.0)"
-run = "./.specify/scripts/release.sh major"
+[tasks."setup:install"]
+run = "pnpm install"
 
 # === ドキュメント ===
 [tasks."docs:lint"]
 description = "Markdownファイルのlint"
-run = "markdownlint-cli2 '**/*.md'"
+run = "pnpx markdownlint-cli2 '**/*.md'"
 
 [tasks."docs:links"]
 description = "Markdownリンクチェック"
-run = "fd -e md -X markdown-link-check --config .markdown-link-check.json --quiet"
+run = "fd -e md -X pnpx markdown-link-check --config .markdown-link-check.json --quiet"
 
 [tasks."docs:links:verbose"]
 description = "Markdownリンクチェック（詳細）"
-run = "fd -e md -X markdown-link-check --config .markdown-link-check.json --verbose"
+run = "fd -e md -X pnpx markdown-link-check --config .markdown-link-check.json --verbose"
 
 [tasks."docs:check"]
 description = "全Markdownドキュメントのlintとリンクチェック"
@@ -100,7 +78,7 @@ depends = ["docs:lint", "docs:links"]
 
 [tasks."docs:fix"]
 description = "Markdownドキュメントの自動修正"
-run = "markdownlint-cli2 --fix '**/*.md'"
+run = "pnpx markdownlint-cli2 --fix '**/*.md'"
 
 # === GitHub Actions ===
 [tasks."action:test"]
@@ -122,9 +100,12 @@ run = [
 
 [tasks."clean:full"]
 description = "完全クリーンアップ（node_modules含む）"
-run = ['mise run clean', 'rm -rf node_modules', 'rm -f pnpm-lock.yaml']
+depends = ["clean", "clean:modules"]
+
+[tasks."clean:modules"]
+run = ['rm -rf node_modules', 'rm -f pnpm-lock.yaml']
 
 # === コミット前チェック ===
 [tasks."pre-commit"]
 description = "コミット前の自動チェックと修正"
-run = ["mise run format", "pnpm test:quick"]
+depends = ["format", "quick"]
