refactor: 違反ラベルを auto: から auto/ に統一（実装コード含む）
- ラベル定数、ロジック、テスト、ドキュメント全体を統一
- GitHub慣習に従い、すべてのカテゴリで / 区切りを使用
- AUTO_LABEL_PREFIX を 'auto:' から 'auto/' に変更
- 22ファイル、全ての auto: 表記を auto/ に置換
- テスト 606件全件合格

--- a/action.yml
+++ b/action.yml
@@ -67,12 +67,12 @@ inputs:
   large_files_label:
     description: "Label for files exceeding size or line limits"
     required: false
-    default: "auto:large-files"
+    default: "auto/large-files"
 
   too_many_files_label:
     description: "Label for PRs with too many files"
     required: false
-    default: "auto:too-many-files"
+    default: "auto/too-many-files"
 
   too_many_lines_label:
     description: "Label for files exceeding line count limits"
