--- a/.github/workflows/test-pr-labeler.yml
+++ b/.github/workflows/test-pr-labeler.yml
@@ -108,8 +108,8 @@ jobs:
           pr_files_limit: "50"
           # Label settings
           auto_remove_labels: "true"
-          large_files_label: "auto:large-files"
-          too_many_files_label: "auto:too-many-files"
+          large_files_label: "auto/large-files"
+          too_many_files_label: "auto/too-many-files"
           # Selective label enabling
           size_enabled: "true"
           size_thresholds: '{"small": 200, "medium": 500, "large": 1000, "xlarge": 3000}'
