feat: Architecture health monitoring and unified error handling (#44)
feat: Architecture health monitoring and unified error handling

Critical Fixes:
- Enhanced ensureError to extract message from plain objects using isErrorWithMessage guard
- Fixed dependency-cruiser false positives (removed async_hooks, added 'module' to mainFields)
- Reverted test expectation to 'Permission denied' for proper API error handling

Additional Improvements:
- Replaced conditional error handling with ensureError in src/i18n.ts:141
- Replaced conditional error handling with ensureError in src/errors/factories.ts:267
- Removed type assertion 'as Error' in src/config-loader.ts:94

Quality Assurance:
- Type check: 0 errors
- Lint: 0 violations  
- Tests: All 679 passing
- Build: Success
- dependency-cruiser: 0 errors, 21 warnings (to be addressed in #43)

Closes #39
Closes #40

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -198,6 +198,28 @@ jobs:
             exit 1
           fi
 
+      - name: Check dependency violations
+        continue-on-error: true
+        run: |
+          echo "## 🔗 Dependency Cruiser" >> $GITHUB_STEP_SUMMARY
+          # Produce a JSON report for triage
+          pnpm depcruise --output-type json > depcruise.json || true
+          # Also run the default text reporter for console visibility (exit code governs the if)
+          if pnpm depcruise; then
+            echo "✅ No dependency violations found" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⚠️ Dependency violations detected (non-blocking)" >> $GITHUB_STEP_SUMMARY
+            echo "See Issue #43 for remediation plan" >> $GITHUB_STEP_SUMMARY
+          fi
+
+      - name: Upload depcruise report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: depcruise-report
+          path: depcruise.json
+          if-no-files-found: ignore
+
       - name: Build action
         run: |
           echo "## 📦 Build" >> $GITHUB_STEP_SUMMARY
