## ✅ リファクタリング完了
Knipを使用してコードベースのリファクタリングが成功しました。以下の作業を完了しました：

### 📦 実施した変更

1. **Knipのインストールと設定**
   - `knip@5.66.2`をdevDependenciesに追加
   - プロジェクトに最適化された`knip.json`を作成

2. **knip.json設定の最適化**
   - 冗長な`entry`パターン（`src/index.ts`）を削除
   - 不要な`ignoreDependencies`設定を削除（`@types/node`, `typescript`, `@vercel/ncc`）

3. **未使用依存関係の削除**
   - `@octokit/rest` (dependencies)
   - `@eslint/eslintrc` (devDependencies)
   - `@types/minimatch` (devDependencies)

4. **未使用exportsの削除**
   - `src/errors/guards.ts`: `isComplexityAnalysisError`関数とその型import
   - `src/errors/index.ts`: `isComplexityAnalysisError`の再export
   - `src/parsers/size-parser.ts`: `parseSizes`関数
   - `src/directory-labeler/types.ts`: `INTERNAL_PATH_SEPARATOR`定数

5. **package.jsonスクリプト追加**
   - `pnpm knip`コマンドをscriptsに追加

### ✅ 品質保証

すべてのチェックが成功しました：
- ✅ **Lint**: 0件のエラー
- ✅ **Type Check**: 0件のエラー
- ✅ **Prettier**: フォーマット問題なし
- ✅ **Tests**: 662テスト全てパス (33ファイル)
- ✅ **Build**: ビルド成功
- ✅ **Knip**: 未使用コード/依存関係なし

### 📊 削減効果

- **削除された依存関係**: 3パッケージ (-16 total packages)
- **削除されたコード**: 約60行
- **クリーンアップされたexports**: 3つの未使用関数/定数

これでコードベースがよりクリーンで保守しやすくなりました！

--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "format": "run-s prettier:write eslint:fix",
     "prettier": "prettier --check .",
     "prettier:write": "prettier --write . --log-level warn",
-    "depcruise": "depcruise --config .dependency-cruiser.js src"
+    "depcruise": "depcruise --config .dependency-cruiser.js src",
+    "knip": "knip"
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.1",
-    "@octokit/rest": "^22.0.0",
     "@typescript-eslint/parser": "^8.46.2",
     "bytes": "^3.1.2",
     "eslint": "^9.38.0",
@@ -49,11 +49,9 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
-    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.38.0",
     "@types/bytes": "^3.1.5",
     "@types/js-yaml": "^4.0.9",
-    "@types/minimatch": "^6.0.0",
     "@types/node": "^24.9.1",
     "@vercel/ncc": "^0.38.4",
     "@vitest/coverage-v8": "^4.0.1",
@@ -64,6 +62,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-neverthrow": "^1.1.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "knip": "^5.66.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "tsx": "^4.20.6",
