chore: clean rebuild dist - remove orphaned files from deleted code

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Generated files - treat as binary to exclude from PR diff stats
-dist/*.js binary
-dist/*.map binary
+dist/**/*.js binary
+dist/**/*.map binary
 dist/**/*.d.ts binary
 dist/licenses.txt binary
