--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 # Generated JavaScript bundles and source maps - treat as binary
-dist/*.js binary
-dist/*.map binary
+dist/**.js binary
+dist/**.map binary
+
+# Generated type definitions
+dist/**.d.ts linguist-generated
