--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "generate:i18n-types": "tsx scripts/generate-i18n-types.ts",
     "postinstall": "pnpm generate:i18n-types",
     "dev": "tsx watch src/index.ts",
-    "build": "ncc build src/index.ts -o dist --source-map --license licenses.txt --quiet",
+    "clean": "rimraf dist",
+    "build": "run-s clean build:compile",
+    "build:compile": "ncc build src/index.ts -o dist --source-map --license licenses.txt --quiet",
     "test": "run-p lint test:vitest",
     "test:vitest": "vitest run",
     "test:watch": "vitest",
@@ -66,6 +68,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
+    "rimraf": "^6.0.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2",
