**概要** - `pnpm format` / `mise format` を実行し、`prettier`・`eslint`・`markdownlint` まで自動整形をかけました。 - `.gitattributes` を修正して `dist/**/*.{js,map,d.ts}` に再対応、さらに `dist/licenses.txt` を再びバイナリ扱いに追加しました。 - `tsconfig.json` の `declaration` を `false` に変更し、ビルド後に `.d.ts` が生成されないよう調整。`pnpm clean && pnpm build` で `dist/` を再生成し、不要な `.d.ts` を除去しました。 - `pnpm lint` / `pnpm test` も通し直しています。
**テスト**
- `pnpm format`
- `mise format`
- `pnpm build`
- `pnpm lint`
- `pnpm test`

**補足・次のアクション**
- 既存の `.d.ts` が大量に削除された状態です。このままコミットして問題ないか確認してください。
- `dist/index.js` / `.map` も再ビルド分の差分があります。Action 用の配布物を更新する場合は同時にコミットしてください。
- 現在の作業ブランチは `vk/5be8-` です。main へ向けた PR かを再チェックしてから push/PR の操作を進めてください。

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
 # Generated JavaScript bundles and source maps - treat as binary
-dist/**.js binary
-dist/**.map binary
+dist/**/*.js binary
+dist/**/*.map binary
 
 # Generated type definitions
-dist/**.d.ts linguist-generated
+dist/**/*.d.ts linguist-generated
+
+# Generated license summary
+dist/licenses.txt binary
