--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "outDir": "./dist",
     "rootDir": "./",
     "sourceMap": true,
-    "declaration": true,
+    "declaration": false,
     "removeComments": true,
     "newLine": "lf",
     "incremental": true,
