`.gitattributes` を更新し、`dist/**/*.js` と `dist/**/*.map` に `linguist-generated` フラグを追加しました。これで GitHub 上でも生成物として扱われ、差分チェックから除外されやすくなります。あとはローカルでコミット・プッシュをお願いします。

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
-# Generated JavaScript bundles and source maps - treat as binary
-dist/**/*.js binary
-dist/**/*.map binary
+# Generated JavaScript bundles and source maps - treat as binary and generated
+dist/**/*.js binary linguist-generated
+dist/**/*.map binary linguist-generated
 
 # Generated type definitions
 dist/**/*.d.ts linguist-generated
