- `.prettierignore:26` のコメントを「Spec-driven metadata」に改め、`.claude/`, `.codex/`, `.kiro/` を明示的にプリティア対象外とする形に整理しました。これで Spec ドキュメント一式を Prettier が触らず、CI でのフォーマットエラーを防げます。 - `pnpm lint` を再実行して全ジョブ成功を確認済みです。
次のステップとして、この更新を含めてプッシュし、PR #65 の CI を再走させれば lint 失敗は解消されるはずです。

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -79,6 +79,8 @@
     "**/node_modules/**",
     "**/dist/**",
     "**/.git/**",
-    "**/_*.md" // アンダースコアで始まるmarkdownファイルを除外
+    "**/_*.md", // アンダースコアで始まるmarkdownファイルを除外
+    "**/.codex/**",
+    "**/.kiro/settings/**"
   ]
 }
