chore: Vitestツールチェーンのパッチ更新とCI検証 (vibe-kanban caa8ba69)
## 概要
- 背景 / 課題: Vitest周辺の開発用依存にパッチ更新が出ているため追従したい
- 主な対応: `@vitest/*` と knip を最新パッチへ更新し、lockファイルを再生成する

## タスク
- [x] `npx npm-check-updates -u`
- [x] `pnpm install`
- [x] 依存差分を確認して不要な変更が入っていないか確認
- [x] `mise ci`
- [x] dist 出力に差分が無いかチェック
- [x] Detect Changes ワークフローに force-push 時のフォールバックを追加
- [x] PR 作成（テンプレ準拠）
- [ ] レビュー依頼とマージ準備

## 品質チェック
- [x] `pnpm lint`
- [x] `pnpm type-check`
- [x] `pnpm test`
- [x] `pnpm build`
- [x] `mise ci`

## 補足
- dist 出力は既存と一致することを確認済み
- Detect Changes のフォールバック追加で CI の安定性を改善
- 関連PR: https://github.com/jey3dayo/pr-labeler/pull/69

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -63,7 +63,19 @@ jobs:
             else
               # 通常のpushの場合
               echo "Using GitHub context: $before_sha..$current_sha"
-              changed_files=$(git diff --name-only $before_sha..$current_sha)
+
+              if git rev-parse --verify "$before_sha" >/dev/null 2>&1; then
+                changed_files=$(git diff --name-only $before_sha..$current_sha)
+              else
+                echo "Before SHA not accessible (likely force-push). Using fallback"
+
+                if git rev-parse --verify "HEAD^" >/dev/null 2>&1; then
+                  changed_files=$(git diff --name-only HEAD^..HEAD)
+                else
+                  echo "No parent commit available, listing all files at HEAD"
+                  changed_files=$(git ls-tree -r --name-only $current_sha)
+                fi
+              fi
             fi
           fi
 
